--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
