--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Philip Davidsson",
-  "name": "Create React App Sample",
+  "name": "Philip Davidssons Art",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,6 +10,5 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#000000"
 }
