index + manifest NL

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Philip Davidsson",
-  "name": "Philip Davidssons Art",
+  "name": "Philip Davidssons Schilderijen",
   "icons": [
     {
       "src": "favicon.ico",
